--- a/Mystery Box/Mystery Box/Base.lproj/Main.storyboard
+++ b/Mystery Box/Mystery Box/Base.lproj/Main.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8121.17" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8101.14"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -243,14 +244,14 @@
                             <constraint firstAttribute="centerY" secondItem="qRV-dT-aXO" secondAttribute="centerY" id="73B-yO-oCz"/>
                             <constraint firstItem="ocy-dS-mZZ" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="21" id="8Jn-pk-8BS"/>
                             <constraint firstItem="plX-DM-Hyp" firstAttribute="top" secondItem="WTM-2e-c9h" secondAttribute="bottom" constant="27" id="9mX-Pg-M8X"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="ocy-dS-mZZ" secondAttribute="trailing" constant="-16" id="Alk-Md-mHN"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="A9Z-Hg-xOs" secondAttribute="trailing" constant="-16" id="C9R-3D-K8f"/>
-                            <constraint firstItem="plX-DM-Hyp" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="-16" id="K39-mp-rEp"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="ocy-dS-mZZ" secondAttribute="trailing" constant="-20" id="Alk-Md-mHN"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="A9Z-Hg-xOs" secondAttribute="trailing" constant="-20" id="C9R-3D-K8f"/>
+                            <constraint firstItem="plX-DM-Hyp" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="-20" id="K39-mp-rEp"/>
                             <constraint firstAttribute="centerY" secondItem="Ncg-sK-Zj6" secondAttribute="centerY" constant="500" id="PWx-LT-Hec"/>
                             <constraint firstItem="A9Z-Hg-xOs" firstAttribute="top" secondItem="YBB-h5-B0e" secondAttribute="bottom" constant="-18" id="QLk-gx-RQP"/>
                             <constraint firstAttribute="centerX" secondItem="qRV-dT-aXO" secondAttribute="centerX" id="azT-u6-err"/>
-                            <constraint firstItem="YBB-h5-B0e" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="-16" id="d0q-8S-QVk"/>
-                            <constraint firstItem="WTM-2e-c9h" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="-16" id="isC-Ak-7mp"/>
+                            <constraint firstItem="YBB-h5-B0e" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="-20" id="d0q-8S-QVk"/>
+                            <constraint firstItem="WTM-2e-c9h" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="-20" id="isC-Ak-7mp"/>
                             <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="plX-DM-Hyp" secondAttribute="bottom" constant="20" id="nTy-o9-3fB"/>
                         </constraints>
                     </view>
